# quant-equity-portfolio

./: .gitignore  README.md  pyproject.toml
projects/factor_research/: README.md
projects/factor_research/src/factor_research/: __init__.py  backtest.py  data.py  factors.py  metrics.py  pipeline.py
projects/factor_research/tests/: test_factor_pipeline.py
projects/optimizer_api/: README.md  main.py
projects/optimizer_api/src/optimizer_api/: __init__.py  api.py  models.py  optimize.py
projects/optimizer_api/tests/: test_api.py  test_optimize.py
projects/regime_dashboard/: README.md  app.py
projects/regime_dashboard/src/regime_dashboard/: __init__.py  data.py  regime.py  risk.py
projects/regime_dashboard/tests/: test_risk_and_regime.py
scripts/: run_factor_research_demo.py  run_optimizer_examples.py  showcase.py
