[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-equity-wow-portfolio"
version = "0.1.0"
description = "Three production-style portfolio projects for quantitative equity technology roles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "duckdb>=0.10",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.7",
  "streamlit>=1.34",
  "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [
  "projects/factor_research/src",
  "projects/optimizer_api/src",
  "projects/regime_dashboard/src",
]
include = ["factor_research*", "optimizer_api*", "regime_dashboard*"]

[tool.pytest.ini_options]
pythonpath = [
  "projects/factor_research/src",
  "projects/optimizer_api/src",
  "projects/regime_dashboard/src",
]
testpaths = [
  "projects/factor_research/tests",
  "projects/optimizer_api/tests",
  "projects/regime_dashboard/tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
